# K-Test

./: README.md  main.py  pyproject.toml
common/: assertions.py  connection.py  debugtalk.py  handleExcel.py  jenkins.py  operationcsv.py  operxml.py  readyaml.py  recordlog.py  sendemail.py  sendrequest.py  two_dimension_data.py
conf/: operationConfig.py  setting.py
mock_server/api_server/: pyproject.toml
mock_server/api_server/base/: flask_service.py
